force-app/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <description>Object to store all OU, Region and Location information for Trading and Supply - ATP/AMV/SCHT</description>
    <label>Location</label>
    <nameField>
        <label>Plant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>