force-app/main/default/objects/Location__c/fields/Alt_Type__c.field-meta.xml
<CustomField>
    <fullName>Alt_Type__c</fullName>
    <label>Alt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternate1</fullName>
            </value>
            <value>
                <fullName>Alternate2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>