force-app/main/default/objects/Location__c/fields/Argus_region__c.field-meta.xml
<CustomField>
    <fullName>Argus_region__c</fullName>
    <label>Argus region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cologne Bay</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>Emsland</fullName>
            </value>
            <value>
                <fullName>Lower Rhine/Ruhr</fullName>
            </value>
            <value>
                <fullName>Magdeburg</fullName>
                <isActive>false</isActive>
                <label>Magdeburg</label>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>Rhine-Main</fullName>
            </value>
            <value>
                <fullName>Seefeld-Schwedt</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>