force-app/main/default/objects/Location__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE01</fullName>
            </value>
            <value>
                <fullName>AT01</fullName>
            </value>
            <value>
                <fullName>CH01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>