force-app/main/default/objects/Location__c/fields/Custom_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Custom_Record_Type__c</fullName>
    <label>Custom Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revolution</fullName>
            </value>
            <value>
                <fullName>InfoKiosk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>