force-app/main/default/objects/Location__c/fields/Depot_MOT__c.field-meta.xml
<CustomField>
    <fullName>Depot_MOT__c</fullName>
    <label>MOT Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barge</fullName>
            </value>
            <value>
                <fullName>ITT</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>TRuck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>