force-app/main/default/objects/Location__c/fields/LocDiff__c.field-meta.xml
<CustomField>
    <fullName>LocDiff__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LocDiff</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>