force-app/main/default/objects/Location__c/fields/Minimum_ATP1__c.field-meta.xml
<CustomField>
    <fullName>Minimum_ATP1__c</fullName>
    <label>Minimum ATP1</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>