force-app/main/default/objects/Location__c/fields/OMR_Reporting__c.field-meta.xml
<CustomField>
    <fullName>OMR_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OMR Reporting</label>
    <type>Checkbox</type>
</CustomField>