force-app/main/default/objects/Location__c/fields/Plant_Type__c.field-meta.xml
<CustomField>
    <fullName>Plant_Type__c</fullName>
    <label>Plant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shell Supply</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Shell Refinery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>