force-app/main/default/objects/Location__c/fields/Related_Plant__c.field-meta.xml
<CustomField>
    <fullName>Related_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Plant</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>