force-app/main/default/objects/Location__c/fields/Related_Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Related_Plant_Code__c</fullName>
    <formula>Related_Plant__r.Plant_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Plant Code</label>
    <type>Text</type>
</CustomField>