force-app/main/default/objects/Location__c/fields/Source_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source Location</label>
    <type>Checkbox</type>
</CustomField>