force-app/main/default/objects/Location__c/fields/Spot_Offer__c.field-meta.xml
<CustomField>
    <fullName>Spot_Offer__c</fullName>
    <label>Spot Offer</label>
    <length>4</length>
    <type>Text</type>
</CustomField>