force-app/main/default/objects/Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plant_Code__c</columns>
    <columns>Location_Type__c</columns>
    <columns>OMR_Region__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>Quote_Region__c</columns>
    <columns>Region_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Country__c</columns>
    <columns>Depot_MOT__c</columns>
    <columns>Supply_Type__c</columns>
    <columns>Source_Location__c</columns>
    <columns>Products_Availability__c</columns>
    <columns>Scenario_Type__c</columns>
    <columns>Online_Location_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>