force-app/main/default/objects/Location__c/listViews/InfoKiosk_Location.listView-meta.xml
<ListView>
    <fullName>InfoKiosk_Location</fullName>
    <columns>NAME</columns>
    <columns>Company_Code__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Location_Type__c</columns>
    <columns>OMR_Region__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>Quote_Region__c</columns>
    <columns>Plant_Type__c</columns>
    <columns>Region_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Custom_Record_Type__c</field>
        <operation>equals</operation>
        <value>InfoKiosk</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Tanquid Depot</value>
    </filters>
    <label>InfoKiosk Location</label>
</ListView>