force-app/main/default/objects/Location__c/listViews/Source_Location.listView-meta.xml
<ListView>
    <fullName>Source_Location</fullName>
    <columns>Abbreviated_Name__c</columns>
    <columns>Alt_Type__c</columns>
    <columns>Country__c</columns>
    <columns>Company_Code__c</columns>
    <columns>Depot_MOT__c</columns>
    <columns>Location_Type__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>NAME</columns>
    <columns>Products_Availability__c</columns>
    <columns>Quote_Region__c</columns>
    <columns>Scenario_Type__c</columns>
    <columns>Source_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Abbreviated_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Source_Location__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Source Locations</label>
</ListView>